# synth

./: .gitignore  Cargo.toml  README.md  todo.txt
buttonmaps/: bcr2000.toml
src/: audio.rs  main.rs  midi.rs  midi_controller.rs  synth.rs  synth_controller.rs  util.rs
src/synthesizers/default/: button_map.rs  compressor.rs  low_pass.rs  mod.rs  rng.rs
