[package]
name = "synth"
version = "0.1.0"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
midir = "0.7.0"
structopt = "0.3"
midly = "0.5"
slotmap = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
