[package]
name = "synth"
version = "0.1.0"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.1"
midir = "0.8.0"
structopt = "0.3.26"
midly = "0.5.2"
slotmap = "1.0.6"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
anyhow = "1.0.66"
